[project]
name = "comfyui-colornodes"
description = "Misc Text Nodes for Comfy UI"
version = "0.0.1"
license = { file = "LICENSE.txt" }
dependencies = []

[project.urls]
Repository = "https://github.com/akierson/ComfyUI-textnodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "akierson"
DisplayName = "ComfyUI-TextSNodes"